src/test/ui/impl-trait/transmute/in-defining-scope.stderr
error[E0391]: cycle detected when computing type of `foo::{opaque#0}`
  --> $DIR/in-defining-scope.rs:3:13
   |
LL | fn foo() -> impl Sized {
   |             ^^^^^^^^^^
   |
note: ...which requires borrow-checking `foo`...
  --> $DIR/in-defining-scope.rs:3:1
   |
LL | fn foo() -> impl Sized {
   | ^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires processing `foo`...
  --> $DIR/in-defining-scope.rs:3:1
   |
LL | fn foo() -> impl Sized {
   | ^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires processing MIR for `foo`...
  --> $DIR/in-defining-scope.rs:3:1
   |
LL | fn foo() -> impl Sized {
   | ^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires unsafety-checking `foo`...
  --> $DIR/in-defining-scope.rs:3:1
   |
LL | fn foo() -> impl Sized {
   | ^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires building MIR for `foo`...
  --> $DIR/in-defining-scope.rs:3:1
   |
LL | fn foo() -> impl Sized {
   | ^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires building THIR for `foo`...
  --> $DIR/in-defining-scope.rs:3:1
   |
LL | fn foo() -> impl Sized {
   | ^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires type-checking `foo`...
  --> $DIR/in-defining-scope.rs:3:1
   |
LL | fn foo() -> impl Sized {
   | ^^^^^^^^^^^^^^^^^^^^^^
   = note: ...which again requires computing type of `foo::{opaque#0}`, completing the cycle
note: cycle used when checking item types in top-level module
  --> $DIR/in-defining-scope.rs:2:1
   |
LL | / use std::mem::transmute;
LL | | fn foo() -> impl Sized {
LL | |
LL | |     unsafe {
...  |
LL | |
LL | | fn main() {}
   | |____________^

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/in-defining-scope.rs:6:9
   |
LL |         transmute::<_, u8>(foo());
   |         ^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `impl Sized` (size can vary because of [type error])
   = note: target type: `u8` (8 bits)

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0391, E0512.
For more information about an error, try `rustc --explain E0391`.
